[package]
name = "tokio_smux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
byteorder = "1.5"
tokio = { version = "1.35", features = [
  "net",
  "rt",
  "macros",
  "io-util",
  "sync",
  "time"
] }
dashmap = "5.5"
log = "0.4"
