[package]
name = "tokio_smux"
version = "0.2.0"
edition = "2021"
authors = ["Yadong Ouyang <oyydoibh@gmail.com>"]
description = "Smux protocol in Rust. Provide multiplexing for reliable streams."
license = "MIT"
readme = "README.md"
keywords = ["smux", "tokio", "multiplexing", "muxing"]
documentation = "https://docs.rs/tokio_smux"
repository = "https://github.com/oyyd/tokio_smux"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
byteorder = "1.5"
tokio = { version = "1.35", features = [
  "net",
  "rt",
  "macros",
  "io-util",
  "sync",
  "time",
] }
dashmap = "5.5"
log = "0.4"


[[example]]
name = "client"

[[example]]
name = "server"


[dev-dependencies]
tokio = { version = "1.35", features = ["rt-multi-thread"] }
